--- a/src/JyAccede/Bundle/LocationBundle/Resources/config/services.yml
+++ b/src/JyAccede/Bundle/LocationBundle/Resources/config/services.yml
@@ -3,7 +3,7 @@ parameters:
 
 services:
   sonata.admin.location:
-          class: JyAccede\Bundle\LocationBundle\Admin\LocationAdmin.php
+          class: JyAccede\Bundle\LocationBundle\Admin\LocationAdmin
           tags:
               - { name: sonata.admin, manager_type: orm, group: "Content", label: "Lieux" }
           arguments:
