--- a/src/JyAccede/Bundle/LocationBundle/Resources/config/services.yml
+++ b/src/JyAccede/Bundle/LocationBundle/Resources/config/services.yml
@@ -12,6 +12,16 @@ services:
               - ~
           calls:
               - [ setTranslationDomain, [LocationBundle]]
+  sonata.admin.category:
+            class: JyAccede\Bundle\LocationBundle\Admin\CategoryAdmin
+            tags:
+                - { name: sonata.admin, manager_type: orm, group: "Emplacements", label: "Catégories" }
+            arguments:
+                - ~
+                - JyAccede\Bundle\LocationBundle\Entity\Category
+                - ~
+            calls:
+                - [ setTranslationDomain, [LocationBundle]]
 #    jy_accede_location.example:
 #        class: %jy_accede_location.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
