--- a/src/JyAccede/Bundle/APIBundle/Resources/config/services.yml
+++ b/src/JyAccede/Bundle/APIBundle/Resources/config/services.yml
@@ -2,6 +2,13 @@ parameters:
 #    jy_accede_api.example.class: JyAccede\Bundle\APIBundle\Example
 
 services:
-#    jy_accede_api.example:
-#        class: %jy_accede_api.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+  sonata.admin.stoppoints:
+            class: JyAccede\Bundle\APIBundle\Admin\StopPointsAdmin
+            tags:
+                - { name: sonata.admin, manager_type: orm, group: "Emplacements", label: "Arrêts Canal TP" }
+            arguments:
+                - ~
+                - JyAccede\Bundle\APIBundle\Entity\StopPoint
+                - JyAccedeAPIBundle:CRUD
+            calls:
+                - [ setTranslationDomain, [APIBundle]]
