--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+jy_accede_search:
+    resource: "@JyAccedeSearchBundle/Resources/config/routing.yml"
+    prefix:   /
+
 jy_accede_api:
     resource: "@JyAccedeAPIBundle/Resources/config/routing.yml"
     prefix:   /
