--- a/src/JyAccede/Bundle/APIBundle/Resources/config/routing.yml
+++ b/src/JyAccede/Bundle/APIBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-jy_accede_api_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: JyAccedeAPIBundle:Default:index }
+jacc_list:
+    pattern:  /arrets_lignes
+    defaults: { _controller: JyAccedeAPIBundle:front:list }
