--- a/src/JyAccede/Bundle/APIBundle/Resources/config/routing.yml
+++ b/src/JyAccede/Bundle/APIBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 jacc_list:
     pattern:  /arrets_lignes
-    defaults: { _controller: JyAccedeAPIBundle:front:list }
+    defaults: { _controller: JyAccedeAPIBundle:Front:list }
